Crash while building SSA (bug 683983, r=cdleary).